Fix images on mobiles

--- a/client/app/styles/app.css
+++ b/client/app/styles/app.css
@@ -395,6 +395,11 @@ i._20 { color: #000000; }
   #connected-list {
     display: none;
   }
+
+  img {
+    max-width: 100%;
+  }
+
   .footer {
     left: 34px;
     right: 34px;
